# pytorch_project_template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.md  README.md  build_docker.sh  cleanup.sh  copy_project.py  export.py  inference.py  pyproject.toml  requirements.txt  run_docker.sh  run_server.sh  server.py  test.py  train.py  train_mnist.py
.github/workflows/: main.yml
configs/: README.md  base_configs.json  classifier_config.py  classifier_cpu_config.json  classifier_cpu_config.py  classifier_cpu_config.yaml  classifier_gpu_config.json  classifier_gpu_config.py  classifier_gpu_config.yaml  classifier_webdataset_cpu_config.json  classifier_webdataset_cpu_config.yaml  mnist_config.json  mnist_config.py  mnist_config.yaml
modules/: config_parser.py
modules/agents/: __init__.py  base_agent.py  classifier_agent.py  mnist_agent.py
modules/augmentations/: __init__.py  classifier_transforms.py  mnist_transforms.py  numeric.py
modules/dataloaders/: __init__.py  base_dataloader.py  webdataset_dataloader.py
modules/datasets/: __init__.py  base_dataset.py  classifier_dataset.py  mnist_dataset.py
modules/loggers/: base_logger.py
modules/losses/: __init__.py  bce.py  chamfer.py  cross_entropy.py  msse.py
modules/metrics/: __init__.py  base.py  base_metric.py
modules/models/: __init__.py  base_model.py  classifier_model.py  example_model.py  mnist_model.py
modules/optimizers/: __init__.py
modules/schedulers/: __init__.py  gradual_warmup_scheduler.py  warmup_cosine_annealing_scheduler.py
modules/utils/: __init__.py  common.py  convert_dataset_to_npz.py  convert_dataset_to_tar.py  convert_to_npz.py  create_ffmpeg_vid.sh  duplicate_data.py  export_utils.py  find_corrupt_images.py  generate_classmap_from_dataset.py  image_operations.py  util.py  (+3 more)
requirements/: inference.txt  minimal.txt  server.txt  test.txt  train.txt
scripts/: build_docker.sh  cleanup.sh  convert_dataset_to_tar.py  count_files.sh  duplicate_data.py  find_corrupt_images.py  generate_classmap_from_dataset.py  inference.py  poetry_to_pip_requirements.py  run_docker.sh  run_server.sh  train_val_test_split.py
server/: Dockerfile  build_docker.sh  build_server_docker.sh  inference.py  inference_server.py  requirements.txt  requirements_onnx_server.txt  requirements_pytorch_server.txt  requirements_server.txt  run_docker.sh  run_server_docker.sh  server.py
src/: config_parser.py
tests/: conftest.py  requirements.txt
(+78 files in other folders)
